# fantasy-football-epl

./: .gitignore  FantasyFootball.lp  README.ipynb  README.md  TODO.txt  optimise.py  pyproject.toml  requirements.txt
data/: p_1.csv  p_10.csv  p_100.csv  p_101.csv  p_102.csv  p_103.csv  p_104.csv  p_105.csv  p_106.csv  p_107.csv  p_108.csv  p_109.csv  p_11.csv  p_110.csv  p_111.csv  p_112.csv  p_113.csv  p_114.csv  p_115.csv  p_116.csv  p_117.csv  p_118.csv  p_119.csv  p_12.csv  p_120.csv  p_121.csv  p_122.csv  p_123.csv  p_124.csv  p_125.csv  p_126.csv  p_127.csv  p_128.csv  p_129.csv  p_13.csv  p_130.csv  p_131.csv  p_132.csv  p_133.csv  p_134.csv  (+493 more)
data_sourcing/: get_data.py  metric_research.ipynb
notebooks/: metric_research.ipynb  sunlight-foundation.mplstyle
src/ff_epl/data_sourcing/: __main__.py  get_data.py
src/ff_epl/optimisation/: optimise.py
